--- a/src/main/resources/gui/fxml/ManagerRequest.fxml
+++ b/src/main/resources/gui/fxml/ManagerRequest.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1021.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1021.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ManagerRequestController">
    <children>
       <VBox prefHeight="720.0" prefWidth="333.0">
          <children>
@@ -24,7 +23,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextArea prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="requestDescription" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </VBox>
       <VBox prefHeight="720.0" prefWidth="694.0">
@@ -33,7 +32,7 @@
                <children>
                   <ScrollPane prefHeight="638.0" prefWidth="715.0">
                      <content>
-                        <TableView prefHeight="526.0" prefWidth="693.0">
+                        <TableView fx:id="requestTable" prefHeight="625.0" prefWidth="693.0">
                           <columns>
                             <TableColumn prefWidth="214.0" text="Id" />
                             <TableColumn prefWidth="224.0" text="Requested By" />
@@ -46,12 +45,12 @@
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" text="Accept">
+                  <Button fx:id="acceptButton" mnemonicParsing="false" onMouseClicked="#acceptRequest" text="Accept">
                      <HBox.margin>
                         <Insets bottom="30.0" left="250.0" right="30.0" top="30.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" text="Reject">
+                  <Button fx:id="rejectButton" mnemonicParsing="false" text="Reject">
                      <HBox.margin>
                         <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                      </HBox.margin>
