--- a/src/main/resources/gui/fxml/PromoManager.fxml
+++ b/src/main/resources/gui/fxml/PromoManager.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1021.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1021.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.PromoManagerController">
    <children>
       <VBox prefHeight="720.0" prefWidth="340.0">
          <children>
@@ -22,7 +22,7 @@
                         <Insets left="10.0" top="15.0" />
                      </HBox.margin>
                   </Label>
-                  <DatePicker editable="false">
+                  <DatePicker fx:id="startDate" editable="false">
                      <HBox.margin>
                         <Insets left="60.0" top="10.0" />
                      </HBox.margin>
@@ -36,7 +36,7 @@
                         <Insets left="10.0" right="5.0" top="15.0" />
                      </HBox.margin>
                   </Label>
-                  <DatePicker>
+                  <DatePicker fx:id="endDate" editable="false">
                      <HBox.margin>
                         <Insets left="60.0" top="10.0" />
                      </HBox.margin>
@@ -50,7 +50,7 @@
                         <Insets left="10.0" right="25.0" top="15.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField>
+                  <TextField fx:id="codeText">
                      <HBox.margin>
                         <Insets left="62.0" top="10.0" />
                      </HBox.margin>
@@ -64,7 +64,7 @@
                         <Insets left="10.0" right="25.0" top="15.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField>
+                  <TextField fx:id="offPercent">
                      <HBox.margin>
                         <Insets top="10.0" />
                      </HBox.margin>
@@ -73,37 +73,37 @@
             </HBox>
             <HBox prefHeight="75.0" prefWidth="302.0">
                <children>
-                  <Button mnemonicParsing="false" text="Add">
+                  <Button fx:id="addButton" mnemonicParsing="false" text="Add">
                      <HBox.margin>
                         <Insets left="80.0" top="15.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" text="Update">
+                  <Button fx:id="updateButton" mnemonicParsing="false" text="Update">
                      <HBox.margin>
                         <Insets left="40.0" top="15.0" />
                      </HBox.margin>
                   </Button>
                </children>
             </HBox>
-            <TableView prefHeight="200.0" prefWidth="200.0">
+            <TableView fx:id="usernameTable" prefHeight="200.0" prefWidth="200.0">
               <columns>
                 <TableColumn prefWidth="301.0" text="Username" />
               </columns>
             </TableView>
             <HBox prefHeight="50.0" prefWidth="302.0">
                <children>
-                  <TextField promptText="Username">
+                  <TextField fx:id="usernameText" promptText="Username">
                      <HBox.margin>
-                        <Insets left="75.0" top="15.0" />
+                        <Insets left="85.0" top="15.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
             <HBox prefHeight="30.0" prefWidth="302.0">
                <children>
-                  <Button mnemonicParsing="false" text="Add">
+                  <Button fx:id="addButton" mnemonicParsing="false" text="Add">
                      <HBox.margin>
-                        <Insets left="130.0" />
+                        <Insets left="140.0" />
                      </HBox.margin>
                   </Button>
                </children>
@@ -112,7 +112,7 @@
       </VBox>
       <ScrollPane prefHeight="720.0" prefWidth="689.0">
          <content>
-            <TableView prefHeight="400.0" prefWidth="684.0">
+            <TableView fx:id="promoTable" prefHeight="400.0" prefWidth="684.0">
               <columns>
                 <TableColumn prefWidth="126.0" text="Start Date" />
                 <TableColumn prefWidth="118.0" text="End Date" />
