--- a/src/main/resources/gui/fxml/PersonalInfoPage.fxml
+++ b/src/main/resources/gui/fxml/PersonalInfoPage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,12 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="view.gui.PersonalInfoController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.PersonalInfoController">
     <children>
         <HBox prefHeight="720.0" prefWidth="781.0">
             <children>
-                <VBox prefHeight="720.0" prefWidth="621.0">
+                <VBox prefHeight="720.0" prefWidth="585.0">
                     <children>
                         <HBox prefHeight="387.0" prefWidth="407.0">
                             <children>
@@ -28,7 +28,7 @@ fx:controller="view.gui.PersonalInfoController">
                                                       <Font size="14.0" />
                                                   </font>
                                               </Label>
-                                    <TextField prefHeight="25.0" prefWidth="221.0" />
+                                    <TextField fx:id="usernameTextField" prefHeight="25.0" prefWidth="221.0" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="382.0">
@@ -38,7 +38,7 @@ fx:controller="view.gui.PersonalInfoController">
                                                       <Font size="14.0" />
                                                   </font>
                                               </Label>
-                                    <TextField prefHeight="25.0" prefWidth="221.0" />
+                                    <TextField fx:id="role" prefHeight="25.0" prefWidth="221.0" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -48,7 +48,7 @@ fx:controller="view.gui.PersonalInfoController">
                                                       <Font size="14.0" />
                                                   </font>
                                               </Label>
-                                    <TextField prefHeight="25.0" prefWidth="221.0" />
+                                    <TextField fx:id="email" prefHeight="25.0" prefWidth="221.0" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -58,7 +58,7 @@ fx:controller="view.gui.PersonalInfoController">
                                                       <Font size="14.0" />
                                                   </font>
                                               </Label>
-                                    <TextField prefHeight="25.0" prefWidth="221.0" />
+                                    <TextField fx:id="firstName" prefHeight="25.0" prefWidth="221.0" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -68,7 +68,7 @@ fx:controller="view.gui.PersonalInfoController">
                                                       <Font size="14.0" />
                                                   </font>
                                               </Label>
-                                    <TextField prefHeight="25.0" prefWidth="221.0" />
+                                    <TextField fx:id="lastName" prefHeight="25.0" prefWidth="221.0" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -78,7 +78,7 @@ fx:controller="view.gui.PersonalInfoController">
                                           <Font size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField prefHeight="25.0" prefWidth="221.0" />
+                                    <TextField fx:id="balance" prefHeight="25.0" prefWidth="221.0" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -88,7 +88,7 @@ fx:controller="view.gui.PersonalInfoController">
                                                       <Font size="14.0" />
                                                   </font>
                                               </Label>
-                                    <TextField prefHeight="25.0" prefWidth="221.0" />
+                                    <TextField fx:id="password" prefHeight="25.0" prefWidth="221.0" />
                                  </children>
                               </HBox>
                                     </children>
@@ -96,13 +96,14 @@ fx:controller="view.gui.PersonalInfoController">
                               <Insets left="5.0" />
                            </HBox.margin>
                                 </VBox>
-                                <VBox alignment="TOP_CENTER" prefHeight="387.0" prefWidth="82.0">
+                                <VBox alignment="TOP_CENTER" prefHeight="387.0" prefWidth="278.0">
                                     <children>
-                                        <Button mnemonicParsing="false" text="Edit Info">
+                                        <Button fx:id="editButton" mnemonicParsing="false" text="Edit Info">
                                             <VBox.margin>
                                                 <Insets top="50.0" />
                                             </VBox.margin>
                                         </Button>
+                              <HBox fx:id="shopNameHBox" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
                                     </children>
                                 </VBox>
                             </children>
@@ -110,18 +111,19 @@ fx:controller="view.gui.PersonalInfoController">
                         <Insets left="10.0" />
                      </VBox.margin>
                         </HBox>
+                  <ScrollPane fx:id="tableScrollPane" prefHeight="331.0" prefWidth="586.0" />
                     </children>
                 </VBox>
             </children>
         </HBox>
-        <VBox alignment="TOP_RIGHT" prefHeight="720.0" prefWidth="809.0">
+        <VBox alignment="TOP_RIGHT" prefHeight="720.0" prefWidth="889.0">
             <children>
                 <ImageView fitHeight="30.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../pic/Main Menu.png" />
                     </image>
                 </ImageView>
-            <VBox prefHeight="693.0" prefWidth="654.0" />
+            <VBox fx:id="detailBox" prefHeight="725.0" prefWidth="694.0" />
             </children>
         </VBox>
     </children>
