--- a/src/main/resources/gui/fxml/PersonalInfoPage.fxml
+++ b/src/main/resources/gui/fxml/PersonalInfoPage.fxml
@@ -23,7 +23,7 @@
                                     <children>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                              <Label prefHeight="61.0" prefWidth="98.0" text="Username: ">
+                                              <Label fx:id="usernameLabel" prefHeight="61.0" prefWidth="98.0" text="Username: ">
                                                   <font>
                                                       <Font size="14.0" />
                                                   </font>
@@ -43,7 +43,7 @@
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                              <Label prefHeight="61.0" prefWidth="98.0" text="Email:">
+                                              <Label fx:id="emailLabel" prefHeight="61.0" prefWidth="98.0" text="Email:">
                                                   <font>
                                                       <Font size="14.0" />
                                                   </font>
@@ -53,7 +53,7 @@
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                              <Label prefHeight="61.0" prefWidth="98.0" text="First Name:">
+                                              <Label fx:id="firstNameLabel" prefHeight="61.0" prefWidth="98.0" text="First Name:">
                                                   <font>
                                                       <Font size="14.0" />
                                                   </font>
@@ -63,7 +63,7 @@
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                              <Label prefHeight="61.0" prefWidth="98.0" text="Last Name:">
+                                              <Label fx:id="lastNameLabel" prefHeight="61.0" prefWidth="98.0" text="Last Name:">
                                                   <font>
                                                       <Font size="14.0" />
                                                   </font>
@@ -73,7 +73,7 @@
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                    <Label prefHeight="61.0" prefWidth="98.0" text="Balance">
+                                    <Label fx:id="balanceLabel" prefHeight="61.0" prefWidth="98.0" text="Balance">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
@@ -83,7 +83,7 @@
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                              <Label prefHeight="61.0" prefWidth="98.0" text="Password:">
+                                              <Label fx:id="passwordLabel" prefHeight="61.0" prefWidth="98.0" text="Password:">
                                                   <font>
                                                       <Font size="14.0" />
                                                   </font>
@@ -103,7 +103,30 @@
                                                 <Insets top="50.0" />
                                             </VBox.margin>
                                         </Button>
-                              <HBox fx:id="shopNameHBox" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
+                              <Button fx:id="cancelButton" mnemonicParsing="false" text="cancle">
+                                 <VBox.margin>
+                                    <Insets top="40.0" />
+                                 </VBox.margin>
+                              </Button>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="shopLabel" prefHeight="61.0" prefWidth="98.0" text="shop">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="shopTextField" prefHeight="25.0" prefWidth="173.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets right="10.0" />
+                                 </padding>
+                              </HBox>
                                     </children>
                                 </VBox>
                             </children>
@@ -123,7 +146,11 @@
                         <Image url="@../pic/Main Menu.png" />
                     </image>
                 </ImageView>
-            <VBox fx:id="detailBox" prefHeight="725.0" prefWidth="694.0" />
+            <ScrollPane fx:id="detailScrollPane" prefHeight="693.0" prefWidth="694.0">
+               <content>
+                  <VBox fx:id="detailVBox" prefHeight="676.0" prefWidth="681.0" />
+               </content>
+            </ScrollPane>
             </children>
         </VBox>
     </children>
