personal info page finished

--- a/src/main/resources/gui/fxml/promoCodesForCustomer.fxml
+++ b/src/main/resources/gui/fxml/promoCodesForCustomer.fxml
@@ -3,8 +3,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 
-<TableView fx:id="tableView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="view.gui.customer.PromoCodesForCustomer">
+<TableView fx:id="tableView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.customer.PromoCodesForCustomer">
     <columns>
         <TableColumn fx:id="startDate" prefWidth="92.66667687892914" text="Start Date" />
         <TableColumn fx:id="endDate" prefWidth="107.33332061767578" text="End Date" />
