--- a/src/main/resources/gui/fxml/PersonalInfoPage.fxml
+++ b/src/main/resources/gui/fxml/PersonalInfoPage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -88,7 +89,7 @@
                                                       <Font size="14.0" />
                                                   </font>
                                               </Label>
-                                    <TextField fx:id="password" prefHeight="25.0" prefWidth="221.0" />
+                                    <PasswordField fx:id="password" prefHeight="25.0" prefWidth="222.0" />
                                  </children>
                               </HBox>
                                     </children>
@@ -121,12 +122,21 @@
                                           <Insets />
                                        </HBox.margin>
                                     </Label>
-                                    <TextField fx:id="shopTextField" prefHeight="25.0" prefWidth="173.0" />
+                                    <TextField fx:id="shopTextField" prefHeight="25.0" prefWidth="173.0">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </TextField>
                                  </children>
                                  <padding>
                                     <Insets right="10.0" />
                                  </padding>
                               </HBox>
+                              <Button fx:id="changePasswordButton" mnemonicParsing="false" text="Change Password">
+                                 <VBox.margin>
+                                    <Insets top="45.0" />
+                                 </VBox.margin>
+                              </Button>
                                     </children>
                                 </VBox>
                             </children>
