--- a/src/main/resources/gui/fxml/AdminMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminMenu.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1160.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1160.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.AdminMenuController">
    <children>
       <HBox prefHeight="720.0" prefWidth="1021.0">
          <children>
@@ -73,12 +73,12 @@
                         </VBox>
                         <VBox prefHeight="332.0" prefWidth="148.0">
                            <children>
-                              <TextField disable="true">
+                              <TextField fx:id="usernameText" disable="true">
                                  <VBox.margin>
                                     <Insets bottom="36.0" top="20.0" />
                                  </VBox.margin>
                               </TextField>
-                              <TextField disable="true">
+                              <TextField fx:id="emailText" disable="true">
                                  <VBox.margin>
                                     <Insets bottom="36.0" />
                                  </VBox.margin>
@@ -88,22 +88,22 @@
                                     <Insets bottom="36.0" />
                                  </VBox.margin>
                               </TextField>
-                              <TextField disable="true">
+                              <TextField fx:id="firstNameText" disable="true">
                                  <VBox.margin>
                                     <Insets bottom="36.0" />
                                  </VBox.margin>
                               </TextField>
-                              <TextField disable="true">
+                              <TextField fx:id="lastNameText" disable="true">
                                  <VBox.margin>
                                     <Insets bottom="36.0" />
                                  </VBox.margin>
                               </TextField>
-                              <PasswordField disable="true" />
+                              <PasswordField fx:id="passwordText" disable="true" />
                            </children>
                         </VBox>
                         <VBox alignment="TOP_CENTER" prefHeight="396.0" prefWidth="145.0">
                            <children>
-                              <Button mnemonicParsing="false" style="-fx-background-color: #3369ff; -fx-display: inline-blck; : FFFF;" text="Edit Info">
+                              <Button fx:id="editInfoButton" mnemonicParsing="false" style="-fx-background-color: #3369ff; -fx-display: inline-blck; : FFFF;" text="Edit Info">
                                  <VBox.margin>
                                     <Insets top="50.0" />
                                  </VBox.margin>
@@ -114,7 +114,7 @@
                   </HBox>
                   <HBox prefHeight="309.0" prefWidth="814.0">
                      <children>
-                        <TableView editable="true" prefHeight="309.0" prefWidth="817.0">
+                        <TableView fx:id="managerTable" editable="true" prefHeight="309.0" prefWidth="817.0">
                           <columns>
                             <TableColumn prefWidth="813.0" text="Other Managers" />
                           </columns>
