--- a/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
+++ b/src/main/resources/gui/fxml/SingleProductForSellerPage.fxml
@@ -187,11 +187,22 @@
 
             </children>
         </HBox>
-      <TableView fx:id="buyersTableView" prefHeight="195.0" prefWidth="600.0">
-        <columns>
-          <TableColumn fx:id="buyersTableViewColumns" prefWidth="598.6666666269302" text="Buyer" />
-        </columns>
-      </TableView>
+      <HBox prefHeight="192.0" prefWidth="600.0">
+         <children>
+            <TableView fx:id="buyersTableView" prefHeight="188.0" prefWidth="129.0">
+              <columns>
+                <TableColumn fx:id="buyersTableViewColumns" prefWidth="127.99997198581696" text="Buyer" />
+              </columns>
+            </TableView>
+            <TableView fx:id="categoryFeatursOfProduct" prefHeight="188.0" prefWidth="473.0">
+              <columns>
+                <TableColumn fx:id="categoryFeaturName" prefWidth="97.33331298828125" text="Name" />
+                <TableColumn prefWidth="92.00001525878906" text="Type" />
+                  <TableColumn fx:id="descriptionOfFeature" prefWidth="281.3333231608073" text="Description" />
+              </columns>
+            </TableView>
+         </children>
+      </HBox>
 
     </children>
 </VBox>
