--- a/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
+++ b/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.seller.CreateSingleProductForSellerController">
    <children>
       <HBox prefHeight="214.0" prefWidth="600.0">
          <children>
@@ -52,10 +52,10 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </VBox>
-            <VBox fx:id="categoryVBox" alignment="CENTER" prefHeight="102.0" prefWidth="134.0" />
+            <VBox fx:id="categoryVBox" alignment="CENTER" prefHeight="97.0" prefWidth="163.0" />
             <VBox alignment="CENTER" prefHeight="102.0" prefWidth="110.0">
                <children>
-                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveButtomClicked" prefHeight="34.0" prefWidth="91.0" text="save">
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="34.0" prefWidth="91.0" text="save">
                      <VBox.margin>
                         <Insets bottom="10.0" />
                      </VBox.margin>
