--- a/src/main/resources/gui/fxml/ComparePane.fxml
+++ b/src/main/resources/gui/fxml/ComparePane.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="450.0" prefWidth="100.0" spacing="10.0">
@@ -24,6 +23,9 @@
             <Insets bottom="3.0" />
          </HBox.margin>
       </VBox>
-      <ScrollPane fx:id="SCROLLPANE" prefHeight="453.0" prefWidth="503.0" />
+      <ScrollPane fx:id="scrollPaneForCompare" prefHeight="453.0" prefWidth="503.0">
+         <content>
+            <HBox fx:id="box" alignment="CENTER_LEFT" />
+         </content></ScrollPane>
    </children>
 </HBox>
