--- a/src/main/resources/gui/fxml/AdminOptionMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminOptionMenu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="140.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.AdminOptionMenuController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="140.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.admin.AdminOptionMenuController">
    <children>
       <Button fx:id="promoButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Promos">
          <font>
