--- a/src/main/resources/gui/fxml/PersonalInfoPage.fxml
+++ b/src/main/resources/gui/fxml/PersonalInfoPage.fxml
@@ -16,7 +16,7 @@
     <children>
         <HBox prefHeight="720.0" prefWidth="781.0">
             <children>
-                <VBox prefHeight="720.0" prefWidth="585.0">
+                <VBox prefHeight="720.0" prefWidth="455.0">
                     <children>
                         <HBox prefHeight="387.0" prefWidth="407.0">
                             <children>
@@ -144,12 +144,12 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                         </HBox>
-                  <ScrollPane fx:id="tableScrollPane" prefHeight="331.0" prefWidth="586.0" />
+                  <ScrollPane fx:id="tableScrollPane" prefWidth="580.0" />
                     </children>
                 </VBox>
             </children>
         </HBox>
-        <VBox alignment="TOP_RIGHT" prefHeight="720.0" prefWidth="893.0">
+        <VBox alignment="TOP_RIGHT" prefHeight="720.0" prefWidth="1159.0">
             <children>
                 <ImageView fitHeight="30.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                     <image>
