--- a/src/main/resources/gui/fxml/SingleProduct.fxml
+++ b/src/main/resources/gui/fxml/SingleProduct.fxml
@@ -16,7 +16,7 @@
 
 <ScrollPane prefHeight="672.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.product.SingleProductController">
    <content>
-      <VBox fx:id="mainBox" prefHeight="664.0" prefWidth="1265.0">
+      <VBox fx:id="mainBox" prefHeight="664.0" prefWidth="1265.0" spacing="30.0">
          <children>
             <HBox spacing="20.0">
                <children>
@@ -34,7 +34,7 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <VBox prefHeight="345.0" prefWidth="227.0">
+                  <VBox prefHeight="345.0" prefWidth="300.0">
                      <children>
                         <HBox prefHeight="73.0" prefWidth="227.0">
                            <children>
