--- a/src/main/resources/gui/fxml/AdminOptionMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminOptionMenu.fxml
@@ -15,7 +15,7 @@
                   <Font size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="100.0" />
+                  <Insets bottom="50.0" />
                </VBox.margin>
             </Button>
             <Button fx:id="categoryButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Categories">
@@ -23,7 +23,7 @@
                   <Font size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="100.0" />
+                  <Insets bottom="50.0" />
                </VBox.margin>
             </Button>
             <Button fx:id="usersButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Users">
@@ -42,12 +42,18 @@
                   <Insets bottom="50.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="personalPage" mnemonicParsing="false" prefHeight="36.0" prefWidth="140.0" text="Personal Page">
+            <Button fx:id="personalPage" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Personal Page">
                <VBox.margin>
-                  <Insets bottom="30.0" />
+                  <Insets bottom="50.0" />
                </VBox.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
             </Button>
-            <Button fx:id="newManagerButton" mnemonicParsing="false" prefHeight="47.0" prefWidth="140.0" text="Add a New Manager" wrapText="true" />
+            <Button fx:id="newManagerButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Add a New Manager" wrapText="true">
+               <VBox.margin>
+                  <Insets bottom="50.0" />
+               </VBox.margin></Button>
          </children>
       </VBox>
       <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" />
