edit info is done.

--- a/src/main/resources/gui/fxml/AdminMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminMenu.fxml
@@ -110,6 +110,7 @@
                               </Button>
                            </children>
                         </VBox>
+                        <Label fx:id="errorLabel" alignment="CENTER" prefHeight="28.0" prefWidth="261.0" textFill="RED" />
                      </children>
                   </HBox>
                   <HBox prefHeight="309.0" prefWidth="814.0">
