--- a/src/main/resources/gui/fxml/ManageUsers.fxml
+++ b/src/main/resources/gui/fxml/ManageUsers.fxml
@@ -49,7 +49,7 @@
                         <Insets left="25.0" top="30.0" />
                      </HBox.margin>
                   </TextField>
-                  <Label text="Last Name:">
+                  <Label prefHeight="14.0" prefWidth="59.0" text="Last Name:">
                      <HBox.margin>
                         <Insets left="40.0" top="35.0" />
                      </HBox.margin>
@@ -61,20 +61,7 @@
                   </TextField>
                </children>
             </HBox>
-            <HBox prefHeight="82.0" prefWidth="442.0">
-               <children>
-                  <Label text="Phone Number:">
-                     <HBox.margin>
-                        <Insets left="15.0" top="35.0" />
-                     </HBox.margin>
-                  </Label>
-                  <TextField fx:id="phoneNumberText" style="-fx-background-color: transparent;">
-                     <HBox.margin>
-                        <Insets left="25.0" top="30.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-            </HBox>
+            <HBox prefHeight="82.0" prefWidth="442.0" />
          </children>
       </VBox>
       <ScrollPane prefHeight="720.0" prefWidth="457.0">
